//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message ClassNames {
	repeated    Class    ClassList     =1;  //类型列表
	uint64      ErrorCode              =2;  //错误编码
}

message Class {
	bytes           Name                = 1;  //圈子名称
	uint64          Size                = 2;  //文章数量
}
